# brainfuck

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
benchmarks/: Cargo.toml
benchmarks/benches/: interpreter_benchmark.rs
bf-tests/: hello-world.bf
brainfuck-example/: brainfuck.java  eof.bf  fizzbuzz.bf  quine.bf  uc.bf
error-messages/: Cargo.toml
error-messages/src/: lib.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs  main.rs
langfuck/: Cargo.toml
langfuck/doc/: documentation.adoc
langfuck/doc/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc
langfuck/langs/: c.json  java.json  uwu-owo.json
langfuck/src/: main.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
optimizer/: Cargo.toml
optimizer/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
