[package]
name = "interpreter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
owo-colors = "3.4.0"
parser = { path = "../parser" }
error-messages = {path = "../error-messages"}
clap = "3.1.18"

[lib]
name = "interpreter"
path = "./src/lib.rs"


