[package]
name = "langfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
include_dir = "0.7.2"
serde = { version = "1.0.137", features = ["derive"] }
interpreter = { path = "../interpreter" }
parser = { path = "../parser" }
error-messages = { path = "../error-messages" }
serde_json = "1.0.81"
lexer = { path = "../lexer" }
peekmore = "1.0.0"
